--- a/resume.html
+++ b/resume.html
@@ -48,7 +48,7 @@ Awards<br>
 Middle School received presidential award for my grades. <br>
 
 
-		<a href="file:///C:/Users/Patrick/Desktop/CPI%20101/index.html">Click to Return to Patricks Index Page</a>
+		<a href="https://pwojcik2.github.io/CPI-101-Websites/">Click to Return to Patricks Index Page</a>
 	</body>
 
 
